fix README, main and uploads

--- a/BERT.ipynb
+++ b/BERT.ipynb
@@ -11,14 +11,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
         "id": "O9JJeDEmYP_q",
-        "outputId": "f6f79a7c-dc15-48a9-e5ce-2ac6684e5ec5"
+        "outputId": "c13b1f63-f318-4e8e-ac22-d8761d32e59d"
       },
       "outputs": [
         {
@@ -31,59 +31,59 @@
             "  Downloading argcomplete-1.10.3-py2.py3-none-any.whl (36 kB)\n",
             "Collecting beautifulsoup4~=4.8.0 (from textract)\n",
             "  Downloading beautifulsoup4-4.8.2-py3-none-any.whl (106 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m106.9/106.9 kB\u001b[0m \u001b[31m2.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m106.9/106.9 kB\u001b[0m \u001b[31m9.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting chardet==3.* (from textract)\n",
             "  Downloading chardet-3.0.4-py2.py3-none-any.whl (133 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m133.4/133.4 kB\u001b[0m \u001b[31m6.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m133.4/133.4 kB\u001b[0m \u001b[31m23.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting docx2txt~=0.8 (from textract)\n",
             "  Downloading docx2txt-0.8.tar.gz (2.8 kB)\n",
             "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Collecting extract-msg<=0.29.* (from textract)\n",
             "  Downloading extract_msg-0.28.7-py2.py3-none-any.whl (69 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m69.0/69.0 kB\u001b[0m \u001b[31m7.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m69.0/69.0 kB\u001b[0m \u001b[31m11.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting pdfminer.six==20191110 (from textract)\n",
             "  Downloading pdfminer.six-20191110-py2.py3-none-any.whl (5.6 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.6/5.6 MB\u001b[0m \u001b[31m29.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.6/5.6 MB\u001b[0m \u001b[31m94.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting python-pptx~=0.6.18 (from textract)\n",
             "  Downloading python_pptx-0.6.23-py3-none-any.whl (471 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m471.6/471.6 kB\u001b[0m \u001b[31m47.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m471.6/471.6 kB\u001b[0m \u001b[31m50.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting six~=1.12.0 (from textract)\n",
             "  Downloading six-1.12.0-py2.py3-none-any.whl (10 kB)\n",
             "Collecting SpeechRecognition~=3.8.1 (from textract)\n",
             "  Downloading SpeechRecognition-3.8.1-py2.py3-none-any.whl (32.8 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m32.8/32.8 MB\u001b[0m \u001b[31m33.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m32.8/32.8 MB\u001b[0m \u001b[31m42.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting xlrd~=1.2.0 (from textract)\n",
             "  Downloading xlrd-1.2.0-py2.py3-none-any.whl (103 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m103.3/103.3 kB\u001b[0m \u001b[31m13.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m103.3/103.3 kB\u001b[0m \u001b[31m14.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting pycryptodome (from pdfminer.six==20191110->textract)\n",
             "  Downloading pycryptodome-3.20.0-cp35-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (2.1 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m70.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.1/2.1 MB\u001b[0m \u001b[31m58.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: sortedcontainers in /usr/local/lib/python3.10/dist-packages (from pdfminer.six==20191110->textract) (2.4.0)\n",
             "Requirement already satisfied: soupsieve>=1.2 in /usr/local/lib/python3.10/dist-packages (from beautifulsoup4~=4.8.0->textract) (2.5)\n",
             "Collecting imapclient==2.1.0 (from extract-msg<=0.29.*->textract)\n",
             "  Downloading IMAPClient-2.1.0-py2.py3-none-any.whl (73 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m74.0/74.0 kB\u001b[0m \u001b[31m10.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m74.0/74.0 kB\u001b[0m \u001b[31m4.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting olefile>=0.46 (from extract-msg<=0.29.*->textract)\n",
             "  Downloading olefile-0.47-py2.py3-none-any.whl (114 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m114.6/114.6 kB\u001b[0m \u001b[31m15.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m114.6/114.6 kB\u001b[0m \u001b[31m18.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: tzlocal>=2.1 in /usr/local/lib/python3.10/dist-packages (from extract-msg<=0.29.*->textract) (5.2)\n",
             "Collecting compressed-rtf>=1.0.6 (from extract-msg<=0.29.*->textract)\n",
             "  Downloading compressed_rtf-1.0.6.tar.gz (5.8 kB)\n",
             "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Collecting ebcdic>=1.1.1 (from extract-msg<=0.29.*->textract)\n",
             "  Downloading ebcdic-1.1.1-py2.py3-none-any.whl (128 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m128.5/128.5 kB\u001b[0m \u001b[31m15.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m128.5/128.5 kB\u001b[0m \u001b[31m21.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: lxml>=3.1.0 in /usr/local/lib/python3.10/dist-packages (from python-pptx~=0.6.18->textract) (4.9.4)\n",
             "Requirement already satisfied: Pillow>=3.3.2 in /usr/local/lib/python3.10/dist-packages (from python-pptx~=0.6.18->textract) (9.4.0)\n",
             "Collecting XlsxWriter>=0.5.7 (from python-pptx~=0.6.18->textract)\n",
             "  Downloading XlsxWriter-3.2.0-py3-none-any.whl (159 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m159.9/159.9 kB\u001b[0m \u001b[31m19.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m159.9/159.9 kB\u001b[0m \u001b[31m24.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hBuilding wheels for collected packages: docx2txt, compressed-rtf\n",
             "  Building wheel for docx2txt (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for docx2txt: filename=docx2txt-0.8-py3-none-any.whl size=3960 sha256=bc8dd7544385d2215d63488b30335fc25c0e595abcb2b0f845cd68ea6e701a25\n",
+            "  Created wheel for docx2txt: filename=docx2txt-0.8-py3-none-any.whl size=3960 sha256=a985d5b24b4010e2289245201ecaa1b9c58fbcecf82b148ca5591cfdd84ae3fa\n",
             "  Stored in directory: /root/.cache/pip/wheels/22/58/cf/093d0a6c3ecfdfc5f6ddd5524043b88e59a9a199cb02352966\n",
             "  Building wheel for compressed-rtf (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for compressed-rtf: filename=compressed_rtf-1.0.6-py3-none-any.whl size=6185 sha256=7c9b3da9c34414ed40dbe943b197dab6feb5fc325293ca44abbb12504b25f747\n",
+            "  Created wheel for compressed-rtf: filename=compressed_rtf-1.0.6-py3-none-any.whl size=6185 sha256=fee810ddd131e145eb6b5a45cbc89d7b125c526c53b7696084e264f60978ab8f\n",
             "  Stored in directory: /root/.cache/pip/wheels/15/3e/48/e7d833ecc516c36f8966d310b1a6386db091a718f1ff3bf85c\n",
             "Successfully built docx2txt compressed-rtf\n",
             "Installing collected packages: SpeechRecognition, ebcdic, docx2txt, compressed-rtf, chardet, argcomplete, XlsxWriter, xlrd, six, pycryptodome, olefile, beautifulsoup4, python-pptx, pdfminer.six, imapclient, extract-msg, textract\n",
@@ -115,10 +115,11 @@
             "application/vnd.colab-display-data+json": {
               "pip_warning": {
                 "packages": [
+                  "chardet",
                   "six"
                 ]
               },
-              "id": "f3b44c6d5f0844b386d4f16522871903"
+              "id": "195dceec2a234d839d982411eae58e9f"
             }
           },
           "metadata": {}
@@ -130,7 +131,7 @@
             "Requirement already satisfied: docx2txt in /usr/local/lib/python3.10/dist-packages (0.8)\n",
             "Collecting python-docx\n",
             "  Downloading python_docx-1.1.0-py3-none-any.whl (239 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m239.6/239.6 kB\u001b[0m \u001b[31m2.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m239.6/239.6 kB\u001b[0m \u001b[31m6.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: lxml>=3.1.0 in /usr/local/lib/python3.10/dist-packages (from python-docx) (4.9.4)\n",
             "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.10/dist-packages (from python-docx) (4.11.0)\n",
             "Installing collected packages: python-docx\n",
@@ -144,7 +145,7 @@
             "Need to get 118 kB of archives.\n",
             "After this operation, 603 kB of additional disk space will be used.\n",
             "Get:1 http://archive.ubuntu.com/ubuntu jammy/universe amd64 antiword amd64 0.37-16 [118 kB]\n",
-            "Fetched 118 kB in 0s (346 kB/s)\n",
+            "Fetched 118 kB in 1s (95.9 kB/s)\n",
             "Selecting previously unselected package antiword.\n",
             "(Reading database ... 121752 files and directories currently installed.)\n",
             "Preparing to unpack .../antiword_0.37-16_amd64.deb ...\n",
@@ -172,19 +173,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "CYU1Bt0yYZUp",
-        "outputId": "94deac9d-7d4f-4343-9a64-626c38fb651d"
+        "outputId": "64eae272-2c4c-4a35-bc80-8554a997852a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "СОГЛАШЕНИЕ N 8\n",
+            "о расторжении трудового договора от 18.10.2010 N 15/к\n",
+            "\n",
+            "г. Казань                                                                                                            15 октября 2016 г.\n",
+            "\n",
+            "Общество с ограниченной ответственностью \"СтройМир\", именуемое в дальнейшем \"Работодатель\", в лице генерального директора Зуева Валерия Павловича, действующего на основании устава, с одной стороны, и менеджер по продажам ООО «СтройМир» Ивова Надежда Артемьевна, именуемая в дальнейшем \"Работник\", с другой стороны, вместе именуемые \"Стороны\", заключили настоящее соглашение о нижеследующем. \n",
+            "1. Прекратить трудовой договор от 18.10.2010 N 15/к, заключенный между Работником и Работодателем, согласно п. 1 ст. 77 ТК РФ. \n",
+            "2. Последним рабочим днем Работника считать 16 ноября 2016 г. \n",
+            "3. Работодатель обязуется: \n",
+            "3.1. Перед увольнением предоставить Работнику оплачиваемый отпуск на 28 календарных дней с 20 октября по 16 ноября 2016 г. \n",
+            "3.2. 19 октября 2016 г. выплатить Работнику выходное пособие в размере одного месячного оклада. \n",
+            "3.3. 19 октября 2016 г. возвратить Работнику трудовую книжку с соответствующей записью и полностью с ним рассчитаться. \n",
+            "4. Работник обязуется передать все дела менеджеру отдела продаж до 20 октября 2016 г. \n",
+            "5. Стороны подтверждают, что размер выходного пособия, установленный в п. 3.2 настоящего соглашения, является окончательным и не может быть изменен (дополнен). \n",
+            "6. Стороны не имеют друг к другу претензий. \n",
+            "7. Настоящее соглашение составлено в двух экземплярах, имеющих одинаковую юридическую силу, по одному для каждой из Сторон.\n",
+            "\n",
+            "Генеральный директор ООО «СтройМир»                     Зуев                           Зуев В.П.\n",
+            "\n",
+            "Менеджер по продажам ООО «СтройМир»                   Ивова                         Ивова Н.А.\n",
+            "\n",
             "СОГЛАШЕНИЕ N 8\n",
             "о расторжении трудового договора от 18.10.2010 N 15/к\n",
             "\n",
@@ -259,8 +281,10 @@
         "}\n",
         "\n",
         "csv_dataset = pd.read_csv(\"sample.csv\")\n",
+        "csv_dataset=csv_dataset.drop (index= 490)\n",
         "# Инициализация списков для хранения текстов и меток классов\n",
         "documents = csv_dataset['text'].values.tolist()\n",
+        "print(documents[0])\n",
         "class_list = csv_dataset['class'].values.tolist()\n",
         "labels = []\n",
         "for i in class_list:\n",
@@ -284,25 +308,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "qtLtaFU7qkrv",
-        "outputId": "0c414476-fd9a-4174-aafe-734638351396"
+        "outputId": "d648180b-a876-4d1f-ef0f-337e02ef442b"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.10/dist-packages/huggingface_hub/utils/_token.py:88: UserWarning: \n",
-            "The secret `HF_TOKEN` does not exist in your Colab secrets.\n",
-            "To authenticate with the Hugging Face Hub, create a token in your settings tab (https://huggingface.co/settings/tokens), set it as secret in your Google Colab and restart your session.\n",
-            "You will be able to reuse this secret in all of your notebooks.\n",
-            "Please note that authentication is recommended but still optional to access public models or datasets.\n",
-            "  warnings.warn(\n",
             "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-multilingual-cased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
             "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
           ]
@@ -325,9 +343,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1, Average Loss: 1.9401286101974218\n",
-            "Epoch 2, Average Loss: 1.502687946093821\n",
-            "Epoch 3, Average Loss: 0.9747143668015447\n"
+            "Epoch 1, Average Loss: 2.0854981230423513\n",
+            "Epoch 2, Average Loss: 1.2615662219118229\n",
+            "Epoch 3, Average Loss: 0.6492455560812908\n"
           ]
         }
       ],
@@ -355,6 +373,7 @@
         "# Создание тензора меток\n",
         "labels = torch.tensor(y_train)\n",
         "\n",
+        "print(len(input_ids), len(labels))\n",
         "# Создание DataLoader для эффективной обработки данных в пакетах\n",
         "dataset = TensorDataset(input_ids, labels)\n",
         "batch_size = 4  # Размер пакета\n",
@@ -389,13 +408,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "_2CQH4YpzSwk",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c543cadf-656f-4065-d338-dda378c8bf1e"
+        "outputId": "85d67a84-924c-4327-bb22-a1e033678871"
       },
       "outputs": [
         {
@@ -441,7 +460,7 @@
         "# Предсказание категорий для новых документов\n",
         "print(X_test)\n",
         "test = [doc.lower() for doc in X_test[:10]]\n",
-        "for i in X_test:\n",
+        "\n",
         "tokenized_new_texts = [tokenizer.encode(doc.lower(), add_special_tokens=True, max_length=512, truncation=True) for doc in test]\n",
         "\n",
         "# Дополнение последовательностей токенов до максимальной длины\n",
@@ -471,7 +490,6 @@
       "cell_type": "code",
       "source": [
         "from sklearn.metrics import accuracy_score\n",
-        "from sklearn.metrics import f1_score\n",
         "# Calculate F1 score for each class separately\n",
         "f1_per_class = f1_score(predicted_labels_text, y_test[:10], average=None)\n",
         "\n",
@@ -495,9 +513,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lPthokonnyDa",
-        "outputId": "3766ce5b-6f1c-4b0c-b4fa-d03f32deea89"
+        "outputId": "6bb72b91-c838-4b8a-d3d4-17271c0285b1"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -506,8 +524,7 @@
             "F1 score per class: [0. 1. 1. 0. 0. 1. 1.]\n",
             "Micro-average F1 score: 0.8000000000000002\n",
             "Macro-average F1 score: 0.5714285714285714\n",
-            "Weighted-average F1 score: 0.8\n",
-            "0.8\n"
+            "Weighted-average F1 score: 0.8\n"
           ]
         }
       ]
